sacsvt21/data/creduce/creduce_n/482/swarm/r2/cb0/8185.c-482-0.err
/project/alipour/rabin/kconfig/data/creduce_n/482/swarm/r2/cb0/8185.c: In function ‘func_76’:
/project/alipour/rabin/kconfig/data/creduce_n/482/swarm/r2/cb0/8185.c:781:1: error: unrecognizable insn:
 }
 ^
(insn 1059 1058 1060 110 (set (reg:QI 966)
        (const_int 192 [0xc0])) /project/alipour/rabin/kconfig/data/creduce_n/482/swarm/r2/cb0/8185.c:604 -1
     (nil))
/project/alipour/rabin/kconfig/data/creduce_n/482/swarm/r2/cb0/8185.c:781:1: internal compiler error: in extract_insn, at recog.c:2154
0xc05df8 _fatal_insn(char const*, rtx_def const*, char const*, int, char const*)
	../../gcc/rtl-error.c:109
0xc05e4b _fatal_insn_not_found(rtx_def const*, char const*, int, char const*)
	../../gcc/rtl-error.c:117
0xb8b99a extract_insn(rtx_def*)
	../../gcc/recog.c:2154
0x8fec83 instantiate_virtual_regs_in_insn
	../../gcc/function.c:1561
0x90088c instantiate_virtual_regs
	../../gcc/function.c:1928
Please submit a full bug report,
with preprocessed source if appropriate.
Please include the complete backtrace with any bug report.
See <http://gcc.gnu.org/bugs.html> for instructions.
